# discourse-ansible

./: .ansible-lint  .gitignore  .yamllint  README.md  build-requirements.txt  parameters-local.vault  parameters-local.yaml  pyproject.toml  requirements.txt  site.yaml
.github/workflows/: lint.yaml
roles/discourse/defaults/: main.yaml
roles/discourse/tasks/: deploy.yaml  main.yaml  prep.yaml  undeploy.yaml
roles/discourse/templates/: ingress.yaml.j2  namespace.yaml.j2  pvc-discourse-sidekiq.yaml.j2  pvc-discourse.yaml.j2  pvc-postgres.yaml.j2  pvc-redis.yaml.j2  pvc.yaml.j2  role.yaml.j2  rolebinding-d-sa.yaml.j2  rolebinding-default-sa.yaml.j2  service-discourse.yaml.j2  service-postgres.yaml.j2  service-redis.yaml.j2  serviceaccount.yaml.j2  statefulset-discourse.yaml.j2  statefulset-postgres.yaml.j2  statefulset-redis.yaml.j2  statefulset.yaml.j2
roles/discourse/vars/: main.yaml
