[tool.poetry]
name = "discourse-ansible"
version = "0.1.0"
description = "Ansible playbooks for Discourse installation"
authors = ["Alan Christie <alan.christie@matildapeak.com>"]
readme = "README.md"
packages = [{include = "discourse_ansible"}]

[tool.poetry.dependencies]
python = "^3.11"
ansible = "^9.1.0"

[tool.poetry.group.dev.dependencies]
yamllint = "^1.33.0"
ansible-lint = { version = "^6.22.1", markers = "platform_system != 'Windows'" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
